<resources>
    <string name="app_name" translatable="false">Pocket Amati</string>
    <!-- Main Activity -->
    <string name="calcName">Calculators</string>
    <string name="measureName">Measurements</string>
    <string name="craftName">Crafting</string>
    <string name="notesName">Notes</string>
    <string name="biosName">Bios</string>
    <string name="toysName">Toys</string>
    <string name="wishlistName">Wishlist</string>
    <string name="expGalleryName">Expensive Instruments</string>
    <string name="aboutName">About</string>
    <!-- Main Activity - Descriptions -->
    <string name="calcDesc">Calculators for Luthiers</string>
    <string name="measureDesc">Prebuild measurements</string>
    <string name="craftDesc">Recipes and more</string>
    <string name="notesDesc">Your personal notes</string>
    <string name="biosDesc">Bios of famous luthiers and other history related stuff</string>
    <string name="toysDesc">Helpful for tuning your violin and to check stuff up</string>
    <string name="wishlistDesc">Wishlist for your tools</string>
    <string name="expGalleryDesc">Gallery with expensive violins and such</string>
    <!-- Calculator Activity -->
    <string name="stopLength">Stop Length </string>
    <string name="fingerboardLength">Fingerboard Length </string>
    <string name="size">Size</string>
    <string name="woodDensity">Wood Density</string>
    <string name="giveMeData">Input body length</string>
    <string name="giveMeDatamm">Input body length (mm)</string>
    <string name="gmdMass">Input wood mass (g)</string>
    <string name="gmdVolume">Input wood volume (cm^3)</string>
    <string name="compute">Compute</string>
    <string name="neckLength">Neck:</string>
    <string name="boardLength">Body:</string>
    <string name="computedText">Length equals:</string>
    <string name="computedDensity">Density equals:</string>
    <string name="fingerboardLengthDesc">Fingerboard:</string>
    <string name="densityEquals">Density:</string>
    <string name="viola">(Viola)</string>
    <string name="violin">(Violin)</string>
    <string name="sizeViolin">Violin Size</string>
    <string name="sizeEquals">Violin size is:</string>
    <string name="sizeNull">0/4</string>
    <string name="unitDensity">g/cm^3</string>
    <string name="calcError">Incorrect value!</string>
    <!-- Measurements Activity -->
    <string name="violinName">Violin</string>
    <string name="violaName">Viola</string>
    <string name="celloName">Cello</string>
    <!-- Bios Activity -->
    <string name="houseAmati" translatable="false">Amati</string>
    <string name="houseStradivari" translatable="false">Stradivari</string>
    <string name="buttonGo">Go</string>
    <!-- About Activity -->
    <string name="authors">Authors</string>
    <string name="sjal">Damian Fajfer - I wrote this!</string>
    <string name="betno">Dominik Bednarz - Responsible for the design. He\'s a champ, love him</string>
    <string name="irv">Aleksandra Janik - the app is basically her idea, fetched me all the data to create this. also fed me</string>
    <string name="thanks">About the app</string>
    <string name="thanksTo">This app was build especially for the students of the Music Academy on the Violin Making course in Poznan, Poland. People studying on similar lutherie courses could also find this app useful so here it is, for free. Because everyone knows how expensive your tools are :)</string>
    <string name="thanksToo">The app is also free as in freedom. It runs on the MIT license and you can find the source on GitHub</string>
</resources>
