<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.skaza.pocketamati.BiosActivity"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/amatiSpinner"
                android:layout_column="0"
                style="@style/AppTheme"
                android:prompt="@string/houseAmati"
                android:entries="@array/AmatiVector" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonGo"
                android:id="@+id/amatiButton"
                android:layout_column="1"
                android:onClick="amatiGo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/stradivariSpinner"
                android:layout_column="0"
                android:prompt="@string/houseStradivari"
                android:entries="@array/StradivariVector" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/buttonGo"
                android:id="@+id/stradivariButton"
                android:layout_column="1"
                android:onClick="stradivariGo" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>
</ScrollView>