<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.skaza.pocketamati.CalculatorActivities.ScaleLengthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/giveMeData"
        android:id="@+id/inputTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/scaleLenghtViolinInput"
        android:layout_below="@+id/inputTextView"
        android:layout_centerHorizontal="true"
        android:digits="0123456789."
        android:inputType="text" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:id="@+id/computeScaleLengthViolin"
        android:layout_below="@+id/scaleLenghtViolinInput"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="Compute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/neckLength"
        android:id="@+id/neckView"
        android:layout_marginTop="92dp"
        android:layout_below="@+id/computeScaleLengthViolin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/boardLength"
        android:id="@+id/boardView"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/neckView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/neckComputed"
        android:layout_above="@+id/boardView"
        android:layout_toRightOf="@+id/computeScaleLengthViolin"
        android:layout_toEndOf="@+id/computeScaleLengthViolin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/boardComputed"
        android:layout_alignTop="@+id/boardView"
        android:layout_alignLeft="@+id/neckComputed"
        android:layout_alignStart="@+id/neckComputed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/scaleLengthViolinDesc"
        android:id="@+id/explainerScaleLenghtViolin"
        android:layout_above="@+id/neckComputed"
        android:layout_alignLeft="@+id/scaleLenghtViolinInput"
        android:layout_alignStart="@+id/scaleLenghtViolinInput"
        android:layout_marginBottom="34dp" />
</RelativeLayout>
