<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:background="#ffcf27">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.skaza.pocketamati.CalculatorActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/violinName"
            android:id="@+id/violin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="openViolinPDF"
            android:clickable="false"
            android:textColor="#ac560c"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#b29722"
            android:layout_below="@+id/violin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/div1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/violaName"
            android:id="@+id/viola"
            android:layout_below="@+id/violin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false"
            android:onClick="openViolaPDF"
            android:textColor="#ac560c"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#b29722"
            android:layout_marginLeft="5dp"
            android:layout_below="@+id/cello"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/div3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/celloName"
            android:id="@+id/cello"
            android:layout_below="@+id/viola"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="openCelloPDF"
            android:clickable="false"
            android:textColor="#ac560c"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#b29722"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/viola"
            android:id="@+id/div2"
            android:layout_marginLeft="5dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>

</ScrollView>
