<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.skaza.pocketamati.CalculatorActivities.FingerBoardViolaActivity"
    android:background="#ffcf27">

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bar"
        android:src="@drawable/passssssk"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/inputTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />
    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bg"
        android:src="@drawable/bckgrnd"
        android:layout_below="@+id/bar"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:textColor="#AB7E0C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/giveMeData"
        android:id="@+id/inputTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp" />
    <EditText
        android:layout_alignLeft="@+id/bar"
        android:layout_alignTop="@+id/bar"
        android:layout_alignRight="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/fingerboardLengthViolaInput"
        android:digits="0123456789."
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:layout_below="@+id/inputTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="150dp"
        android:layout_marginLeft="30dp"
        android:layout_above="@+id/bg"
        android:background="@android:color/transparent"/>
    <TextView
        android:id="@+id/computeFingerboardLengthViola"
        android:textSize="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bar"
        android:layout_alignTop="@+id/bar"
        android:layout_alignRight="@+id/bar"
        android:layout_alignBottom="@+id/bar"
        android:gravity="center"
        android:text="@string/compute"
        android:textColor="#ffcf27"
        android:clickable="true"
        android:onClick="Compute"
        android:layout_marginLeft="195dp" />

    <TextView
        android:textColor="#c2a55b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fingerboardLengthDesc"
        android:id="@+id/fingerboardView"
        android:layout_below="@+id/explainerFingerboardLenghtViola"
        android:layout_alignLeft="@+id/explainerFingerboardLenghtViola"
        android:layout_alignStart="@+id/explainerFingerboardLenghtViola"
        android:layout_marginTop="20dp" />


    <TextView
        android:textColor="#ac560c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/fingerboardComputed"
        android:layout_below="@+id/fingerboardView"
        android:layout_alignLeft="@+id/fingerboardView"
        android:layout_alignStart="@+id/fingerboardView" />


    <TextView
        android:textColor="#c2a55b"
        android:layout_alignLeft="@+id/bg"
        android:layout_alignTop="@+id/bg"
        android:layout_alignRight="@+id/bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/computedText"
        android:id="@+id/explainerFingerboardLenghtViola"
        android:layout_below="@+id/bar"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:textColor="#ac560c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/dotFingerboard"
        android:layout_below="@+id/fingerboardView"
        android:layout_toRightOf="@+id/fingerboardComputed"
        android:layout_toEndOf="@+id/fingerboardComputed"
        android:text="."
        android:layout_marginTop="5dp" />

    <TextView
        android:textColor="#ac560c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/fingerboardComputed2"
        android:text="0"
        android:layout_alignTop="@+id/dotFingerboard"
        android:layout_toRightOf="@+id/dotFingerboard"
        android:layout_toEndOf="@+id/dotFingerboard" />
</RelativeLayout>
